crates/aquascope/tests/snapshots/stepper__main@if_1.test.snap
---
source: crates/aquascope/tests/stepper.rs
description: main@if_1.test
---
- - 1
  - - - s1
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: High
            value: true
- - 2
  - - - s2
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: High
            value: true
- - 7
  - - - "*b"
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: None
            value: false
    - - b
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: None
            value: false
          drop:
            type: High
            value: true
    - - s1
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: High
          value: 0
        loan_write_refined:
          type: High
          value: 0
        loan_drop_refined:
          type: High
          value: 0
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 9
  - - - "*b"
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: None
            value: false
    - - b
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: None
            value: false
          drop:
            type: High
            value: true
    - - s2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: High
          value: 4
        loan_write_refined:
          type: High
          value: 4
        loan_drop_refined:
          type: High
          value: 4
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 12
  - - - "*b"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: None
            value: false
    - - b
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - s1
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: High
            value: true
    - - s2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
            value: true
          write:
            type: High
            value: true
          drop:
            type: High
            value: true
- - 14
  - - - s1
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 15
  - - - s2
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
